Fix screensaver code warnings

Avoid warnings because of our re-use of GErrors.

When the "new" (-ish) APIs of gnome-screensaver fail, don't overwrite
the existing GError, and print the original error.

https://bugzilla.gnome.org/show_bug.cgi?id=598173